@@ -1,4 +1,7 @@
 2010-05-16
+ Added more of zlib and tcl::prefix in syntaxbuild.
+
+2010-05-16
  Corrected output in db browser. Fixed GUI test for db browser.
 
 2010-05-16
